--- a/DeepFeatureExtractor/pom.xml
+++ b/DeepFeatureExtractor/pom.xml
@@ -13,18 +13,6 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>org.openimaj</groupId>
-      <artifactId>core-hadoop</artifactId>
-      <version>${openimaj.version}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openimaj</groupId>
-      <artifactId>image-processing</artifactId>
-      <version>${openimaj.version}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
       <groupId>org.deeplearning4j</groupId>
       <artifactId>deeplearning4j-core</artifactId>
       <version>0.9.1</version>
@@ -38,6 +26,42 @@
       <groupId>org.deeplearning4j</groupId>
       <artifactId>deeplearning4j-zoo</artifactId>
       <version>0.9.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openimaj</groupId>
+      <artifactId>core-hadoop</artifactId>
+      <version>${openimaj.version}</version>
+      <scope>compile</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.openimaj</groupId>
+          <artifactId>core-citation</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.openimaj</groupId>
+      <artifactId>image-processing</artifactId>
+      <version>${openimaj.version}</version>
+      <scope>compile</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.openimaj</groupId>
+          <artifactId>core-experiment</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>net.sourceforge.jeuclid</groupId>
+          <artifactId>jeuclid-core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>uk.ac.ed.ph.snuggletex</groupId>
+          <artifactId>snuggletex-core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>uk.ac.ed.ph.snuggletex</groupId>
+          <artifactId>snuggletex-upconversion</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
